syntax = "proto2";

option java_package = "com.android.asuite.clearcut";

message Duration {
  required int64 seconds = 1;
  required int32 nanos = 2;
}

// ----------------
// ENUM DEFINITIONS
// ----------------
enum UserType {
  GOOGLE = 0;
  EXTERNAL = 1;
}
